# battlesnake

./: .gitignore  Cargo.toml  README.md  Rocket.toml  appspec.yml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: main.rs  snakeprops.rs
engine/: Cargo.toml
engine/src/: api.rs  lib.rs  path.rs  point.rs  snake.rs
engine/src/api/: battlesnake.rs  board.rs  gamectx.rs  gamestate.rs  movement.rs  point.rs
engine/src/tests/data/: 0000.json
engine/src/tests/data/invalid/: 0000.json
engine/src/traits/: grid.rs
engine/src/utils/: status.rs
engine/src/wrapped/: grid.rs
old_src/: main.rs
old_src/battlesnake/: board.rs  game.rs  game_logger.rs  grid.rs  mod.rs  point.rs
public/: emoji.html  index.html
resources/: README.md  notes.md  versions.md
scripts/: app_run.sh  app_stop.sh  linode_run.sh  prerequirements.sh
src/: main.rs  request_handler.rs  server.rs  website_handler.rs
src/battlesnake/: astar.rs  board.rs  dfs.rs  direction.rs  domove.rs  game.rs  game_logger.rs  grid.rs  heuristic.rs  input.rs  mcts.rs  minimax.rs  mod.rs  path.rs  point.rs  snake.rs
src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
tests/: local_test.sh  test_move.json
