[package]
name = "battlesnake"
version = "0.1.0"
license = "MIT"
authors = ["Jiri Novotny <hello@jiricodes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.10"