[package]
name = "BattleSnakeAPI"
version = "0.2.0"
license = "MIT"
authors = ["Jiri Novotny <hello@jiricodes.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3.3.2"

