[package]
name = "battlesnake_engine"
version = "0.2.0"
license = "MIT"
authors = ["Jiri Novotny <hello@jiricodes.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3.3.2"
chrono = "0.4.19"
log = "0.4.14"
rayon = "1.5.1"
colored = "2.0.0"
clap = "2.33.3"
lazy_static = "1.4.0"
